@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- Added more netplay debug code - SvdB
 - Added uio_fprintf() and uio_vfprintf() - SvdB
 - Any input will register for at least one frame (Bug #864) - Michael
 - Many VControl cleanups - Michael
